--- a/event.html
+++ b/event.html
@@ -7,64 +7,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+
+
   <link rel="stylesheet" href="./css/style.css" />
-  <title>About</title>
+ 
+  <title>Event</title>
 </head>
 
 <body>
-  <!-- Navbar -->
-  <header class="header">
-    <nav class="navbar">
-      <ul class="nav-menu">
-        <li class="nav-item">
-          <a href="./index.html" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="./about.html" class="nav-link">About</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Events</a>
-        </li>
-        <li class="nav-item">
-          <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
-        </li>
-        <li class="nav-item">
-          <a href="./contact.html" class="nav-link">Contact Us</a>
-        </li>
-      </ul>
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-    </nav>
-  </header>
-  <!-- Navbar -->
+
+
+    <!-- Navbar -->
+    <header class="header">
+      <nav class="navbar">
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="./about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="./event.html" class="nav-link">Events</a>
+          </li>
+          <li class="nav-item">
+            <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contact.html" class="nav-link">Contact Us</a>
+          </li>
+
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+    <!-- Navbar -->
 
 
 
-  <div class="flex items-center mt-8 mb-8  max-w-full  text-white ">
-    <img src="./images/Events.jpg" class="w-80" alt="">
-  </div>
-
-
-
-
-  <!-- Footer -->
-
-  <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
-    <p class="mb-2 text-xs">CONNECT WITH US</p>
-    <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link/" target="_blank"><img
-        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
-    <div class="flex text-xs ">
-      <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
-        reserved.
-      </p>
+    <div class="container mx-auto px-4 m-8">
+      <img src="./images/Events.jpg" class="max-h-full mb-64 md:mb-0" alt="">
     </div>
-  </footer>
 
-  <!-- Footer End -->
-  <script src="./js/script.js"></script>
+
+
+    <!-- Footer -->
+
+    <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
+      <p class="mb-2 text-xs">CONNECT WITH US</p>
+      <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link" target="_blank"><img
+        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
+      <div class="flex text-xs justify-center">
+        <p> Copyright ©2022 Centurion University of Technology and Management | All rights reserved
+        </p>
+      </div>
+    </footer>
+
+    <!-- Footer End -->
+    <script src="./js/script.js"></script>
+    
+
 
 </body>
 
