--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="./about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Events</a>
+            <a href="./event.html" class="nav-link">Events</a>
           </li>
           <li class="nav-item">
             <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
