--- a/event.html
+++ b/event.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <link rel="stylesheet" href="./css/style.css" />
 
+    <title>Event</title>
+  </head>
 
-  <link rel="stylesheet" href="./css/style.css" />
- 
-  <title>Event</title>
-</head>
-
-<body>
-
-
+  <body>
     <!-- Navbar -->
     <header class="header">
       <nav class="navbar">
@@ -31,12 +27,13 @@
             <a href="./event.html" class="nav-link">Events</a>
           </li>
           <li class="nav-item">
-            <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
+            <a href="./Co-ordinator_page/Index.html" class="nav-link"
+              >Co-Ordinators</a
+            >
           </li>
           <li class="nav-item">
             <a href="./contact.html" class="nav-link">Contact Us</a>
           </li>
-
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -47,31 +44,37 @@
     </header>
     <!-- Navbar -->
 
-
-
-    <div class="container mx-auto px-4 m-8">
-      <img src="./images/Events.jpg" class="max-h-full mb-64 md:mb-0" alt="">
-    </div>
-
-
+    <!-- <div class="flex-col shrink-0 mx-auto px-4 m-8">
+      <img src="./images/Events.jpg"alt="">
+    </div> -->
+    
+      <div class="grid grid-cols-1 grid-rows-1 px-4 py-4">
+        <img src="./images/Events.jpg" alt="" />
+      </div>
+  
 
     <!-- Footer -->
 
-    <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
+    <!-- <footer
+      class="flex flex-col md:shrink-0 items-center p-2 max-w-full bg-black text-white mb-0"
+    >
       <p class="mb-2 text-xs">CONNECT WITH US</p>
-      <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link" target="_blank"><img
-        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
+      <a
+        href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link"
+        target="_blank"
+        ><img
+          src="https://img.icons8.com/color/48/000000/instagram-new--v1.png"
+          class="h-10 w-10 mb-2"
+      /></a>
       <div class="flex text-xs justify-center">
-        <p> Copyright ©2022 Centurion University of Technology and Management | All rights reserved
+        <p>
+          Copyright ©2022 Centurion University of Technology and Management |
+          All rights reserved
         </p>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Footer End -->
     <script src="./js/script.js"></script>
-    
-
-
-</body>
-
+  </body>
 </html>
